Fix z-index issue on tags

--- a/src/assets/styles/04_elements/_blog-meta.scss
+++ b/src/assets/styles/04_elements/_blog-meta.scss
@@ -18,6 +18,11 @@
     text-transform: uppercase;
   }
 
+  ul  {
+    @include z-index(low);
+    position: relative;
+  }
+
   a {
     border-bottom: 1px solid rgba($color-mulberry, 0.5);
     color: $color-siren;
